# ARCH2026-Roo

./: .gitignore  README.md  RooLowLevelESP32  RooLowLevelESP32.ino  active_susp_test.ino  roo_low_level
install/: local_setup.sh  setup.sh
install/roo_libcamera/share/roo_libcamera/: package.bash  package.dsv  package.sh  package.xml  package.zsh
log/: latest_build
src/: RooLowLevelESP32.ino
src/roo_bringup/: package.xml  setup.cfg  setup.py
src/roo_bringup/launch/: roo_bringup.launch.py
src/roo_bringup/udev/: 99-roo-devices.rules
src/roo_cam_uart/: package.xml  setup.cfg  setup.py
src/roo_cam_uart/roo_cam_uart/: uart_cam_node.py
src/roo_cmd_mux/: package.xml  setup.cfg  setup.py
src/roo_cmd_mux/roo_cmd_mux/: cmd_mux_node.py
src/roo_libcamera/: setup.cfg  setup.py
src/roo_libcamera/roo_libcamera/: compressed_republisher.py  image_compressor.py  libcamera_node.py
src/roo_protocol/: package.xml  setup.cfg  setup.py
src/roo_protocol/roo_protocol/: rx_decode_node.py  tx_encode_node.py
src/roo_serial/: package.xml  setup.cfg  setup.py
src/roo_serial/roo_serial/: serial_rx_node.py  serial_tx_node.py
src/roo_teleop_ps5/: package.xml  setup.cfg  setup.py
src/roo_teleop_ps5/roo_teleop_ps5/: teleop_ps5_node.py
src/roo_vision/: setup.cfg  setup.py
src/roo_vision/launch/: camera.launch.py
src/roo_web_bridge/: package.xml  setup.cfg  setup.py
src/roo_web_bridge/roo_web_bridge/: web_bridge_node.py
web_dashboard/: index.html  package-lock.json  package.json
web_dashboard/src/: App.jsx  config.js  index.css  main.jsx
(+63 files in other folders)
